assets/sass/default.scss
---
---
@import "theme";
@import "typography";

html {
  background-color: map-get($thistle, extra-light);
}

body {
  position: relative;
  background-color: map-get($thistle, light);
  margin: 0;
  max-width: 1024px;
  @media only screen and (min-width: 1024px) {
    margin-left: calc((100vw - 1024px) / 2);
    margin-right: calc((100vw - 1024px) / 2);
  }
}

section {
  background-color: white;
  border-radius: 5px;
  box-shadow: 10px 10px 10px 0 rgba(34, 34, 34, 0.1);
  margin-bottom: 40px;
  margin-left: 20px;
  margin-right: 20px;
  max-width: 780px;
  padding: 10px;
  @media only screen and (min-width: 1024px) {
    margin-left: calc((100% - 780px) / 2);
    margin-right: calc((100% - 780px) / 2);
  }
}

.content {
  margin: 0 20px 0 20px;
}

button {
  background-color: white;
  border-radius: 5px;
  border: none;
  box-shadow: 0 2px 4px 0 rgba(34, 34, 34, 0.1);
  cursor: pointer;
  display: inline-block;
  font-size: 13px;
  font-weight: bold;
  letter-spacing: 1px;
  min-height: 10px;
  min-width: 20px;
  padding: 13px 35px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.2s ease;
  width: 100%;
  @media only screen and (min-width: 720px) {
    width: auto;
  }
}

button:hover {
  background-color: map-get($thistle, medium);
  transform: translateY(-2px);
  box-shadow: 0 3px 8px 0 rgba(34, 34, 34, 0.1);
}

button:active {
  background-color: map-get($thistle, dark);
  box-shadow: 0 1px 4px 0 rgba(34, 34, 34, 0.1);
  transition: all 0.1s ease;
  transform: translateY(1px);
  border-width: 0;
}

button:disabled {
  cursor: not-allowed;
  background-color: map-get($thistle, extra-dark);
}

img {
  max-width: 100%;
}

blockquote {
  background-color: map-get($thistle, medium);
  border-left: solid 0.5em map-get($thistle, dark);
}

table {
  width: 100%;
}

